Fixed misaligned boxes on wiki page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,12 @@ img {
   padding-top: 10px;
 }
 
-div.row > .col-md:first-child {
+div.row > .col-md {
   margin-bottom: 10px;
+}
+
+div.row {
+  margin-top: -10px;
 }
 
 html {
